--- a/wanandroid/src/main/res/layout/fragment_home.xml
+++ b/wanandroid/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.chipman.littlebox.widget.NoInterceptTouchSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chipman.littlebox.wanandroid.widget.NoInterceptTouchSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
@@ -45,4 +45,4 @@
             app:layout_constraintTop_toBottomOf="@+id/homeTabLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.chipman.littlebox.widget.NoInterceptTouchSwipeRefreshLayout>
+</com.chipman.littlebox.wanandroid.widget.NoInterceptTouchSwipeRefreshLayout>
