--- a/wanandroid/src/main/res/layout/item_paging_footer.xml
+++ b/wanandroid/src/main/res/layout/item_paging_footer.xml
@@ -3,21 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="horizontal"
-    android:paddingVertical="@dimen/dp_30">
-
-    <ProgressBar
-        android:id="@+id/progress_view"
-        android:layout_width="@dimen/dp_30"
-        android:layout_height="@dimen/dp_30"
-        android:layout_gravity="center" />
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/load_text"
+        android:id="@+id/errorMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_10"
-        android:gravity="center"
-        android:text="加载中..." />
+        android:visibility="gone" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loadingProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/retryButton"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="重试"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/endTips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:text="没有更多数据了"
+        android:textColor="?colorPrimary"
+        android:visibility="gone" />
 
 </LinearLayout>
