--- a/eyepetizer/src/main/res/layout/layout_loading_container.xml
+++ b/eyepetizer/src/main/res/layout/layout_loading_container.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -26,15 +25,13 @@
             android:layout_width="144dp"
             android:layout_height="144dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_self_improvement_48"
-            app:tint="?colorPrimary" />
+            android:src="@drawable/ic_empty" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/empty_data_tips"
-            android:textColor="?colorPrimary"
+            android:text="@string/empty_tips"
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
