--- a/funny/src/main/res/layout/fragment_home.xml
+++ b/funny/src/main/res/layout/fragment_home.xml
@@ -8,24 +8,34 @@
         android:id="@+id/tab_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="?colorSurface"
+        app:layout_constraintEnd_toStartOf="@+id/bt_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="start"
         app:tabIndicator="@null"
+        app:tabMaxWidth="50dp"
         app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/material_orange_700" />
+        app:tabSelectedTextColor="@color/material_orange_700"
+        app:tabTextAppearance="@style/TabLayout.TextAppearance" />
 
     <ImageButton
         android:id="@+id/bt_search"
         style="?attr/actionButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="4dp"
         android:src="@drawable/ic_search"
         app:layout_constraintBottom_toBottomOf="@+id/tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tab_layout" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/material_grey_300"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
