--- a/funny/src/main/res/layout/layout_joke_social_info.xml
+++ b/funny/src/main/res/layout/layout_joke_social_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    app:alignItems="center"
+    app:justifyContent="space_around">
 
     <TextView
         android:id="@+id/like"
@@ -15,11 +16,7 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_emoji_like"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/unlike"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:drawableStartCompat="@drawable/ic_emoji_like" />
 
     <TextView
         android:id="@+id/unlike"
@@ -30,11 +27,7 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_emoji_unlike"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/message"
-        app:layout_constraintStart_toEndOf="@+id/like"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:drawableStartCompat="@drawable/ic_emoji_unlike" />
 
     <TextView
         android:id="@+id/message"
@@ -45,11 +38,7 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_message"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/share"
-        app:layout_constraintStart_toEndOf="@+id/unlike"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:drawableStartCompat="@drawable/ic_message" />
 
     <TextView
         android:id="@+id/share"
@@ -60,9 +49,6 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_share"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/message"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:drawableStartCompat="@drawable/ic_share" />
+
+</com.google.android.flexbox.FlexboxLayout>
