--- a/funny/src/main/res/layout/layout_joke_common_info.xml
+++ b/funny/src/main/res/layout/layout_joke_common_info.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -13,8 +12,8 @@
 
         <ImageView
             android:id="@+id/avatar"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +27,6 @@
             android:ellipsize="end"
             android:lines="1"
             android:textSize="14sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/signature"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,6 +38,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/nickname"
             app:layout_constraintTop_toBottomOf="@+id/nickname"
@@ -49,10 +48,10 @@
             android:id="@+id/attention"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:text="+关注"
-            android:textColor="@color/material_deep_orange_700"
-            android:textSize="18sp"
+            android:layout_marginHorizontal="16dp"
+            android:text="+ 关注"
+            android:textColor="@color/material_orange_A200"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/plugin"
@@ -78,9 +77,10 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:maxHeight="250dp"
         android:scaleType="fitCenter"
-        android:visibility="gone"
-        tools:src="@drawable/ic_launcher_background" />
+        android:visibility="gone" />
 </LinearLayout>
