--- a/funny/src/main/res/layout/layout_joke_social_info.xml
+++ b/funny/src/main/res/layout/layout_joke_social_info.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
     app:alignItems="center"
-    app:justifyContent="space_around">
+    android:layout_marginTop="12dp"
+    app:justifyContent="space_between">
 
     <TextView
         android:id="@+id/like"
@@ -16,7 +16,7 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_emoji_like" />
+        app:drawableStartCompat="@drawable/ic_smile" />
 
     <TextView
         android:id="@+id/unlike"
@@ -27,7 +27,7 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:drawableStartCompat="@drawable/ic_emoji_unlike" />
+        app:drawableStartCompat="@drawable/ic_unlike" />
 
     <TextView
         android:id="@+id/message"
