--- a/funny/src/main/res/values/styles.xml
+++ b/funny/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="TabLayout.TextAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">14sp</item>
+<!--        <item name="android:textStyle">bold</item>-->
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
